colcon_ws/log/build_2022-09-10_05-34-06/dasc_robot/stderr.log
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp: In member function ‘void JoystickController::takeoff()’:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:76:7: error: ‘err’ was not declared in this scope; did you mean ‘erf’?
   76 |       err = 0;
      |       ^~~
      |       erf
make[2]: *** [CMakeFiles/joystick_controller.dir/build.make:63: CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:308: CMakeFiles/joystick_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
